[package]
name = "timestamped"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastwebsockets = { path = "..", features = ["upgrade"] }
hyper-util = { version = "0.1.11", features = ["tokio"] }
tokio = { version = "1.44.2", features = ["full"] }
rustls-pki-types = "1.11.0"
http-body-util = "0.1.3"
tokio-rustls = "0.26.2"
webpki-roots = "0.26.8"
anyhow = "1.0.98"
bytes = "1.10.1"
hyper = "1.6.0"
utf-8 = "0.7.6"